# conversion_uplift_experimentation_project

./: .env.example  .gitignore  LICENCE  README.md  main_project_steps.md  pyproject.toml
data/final/: campaign_summary.csv  channel_campaign_summary.csv  history_segment_campaign_summary.csv  modeling_features_encoded.csv  modeling_target_conversion.csv  modeling_target_spend.csv  modeling_target_visit.csv  newbie_campaign_summary.csv  segment_uplift_summary.csv  treatment_control_summary.csv  zip_campaign_summary.csv
docs/: main_project_steps.md  sql_analysis_summary.md
docs/powerbi/: dashboard_notes.md  measures_kpis.md
outputs/reports/: feature_dataset_summary.csv  modeling_classification_conversion_metrics.csv  modeling_classification_visit_metrics.csv  modeling_regression_spend_metrics.csv  mysql_load_summary.csv  python_campaign_type_summary.csv  python_outcome_overview.csv  python_segment_summary.csv  python_treatment_control_summary.csv  raw_data_ingestion_summary.csv  (+4 more)
powerbi/: conversion_uplift_experimentation_dashboard.pbix  dashboard_notes.md  measures_kpis.md
sql/: 01_create_database.sql  02_create_tables.sql  03_load_raw_data.sql  04_validation_queries.sql  05_experiment_analysis_queries.sql  06_reporting_views.sql
tasks/: task_build_bld_mirror.py  task_build_reporting_tables.py  task_features.py  task_ingest_data.py  task_load_mysql.py  task_model_scoring.py  task_preprocess_data.py  task_uplift.py
tests/: test_config.py  test_database.py  test_export.py  test_features.py  test_ingest.py  test_modeling.py  test_pipeline_integration.py  test_preprocess.py  test_uplift.py
(+10 files in other folders)
